# fediq

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  package.json  prettier.config.cjs  tailwind.config.js
.github/workflows/: build.yaml  clippy.yaml  rustfmt.yaml
chart/templates/: deployment.yaml  serviceaccount.yaml
locales/ko-KR/: auth-failed.ftl  index-login.ftl  index-logout.ftl  index.ftl
src/: api.rs  config.rs  handler.rs  internationalization.rs  main.rs
src/api/: fediverse.rs  kube.rs
src/handler/: auth.rs  extract.rs  templates.rs
src/handler/templates/: filters.rs
templates/: auth-failed.html  base.css  base.html  index-login.html  index-logout.html  index.html
