[package]
name = "fediq"
version = "0.1.0"
edition = "2021"
default-run = "fediq"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
askama = "0.12.1"
askama_axum = "0.3.0"
async-once-cell = "0.5.3"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["headers"] }
base64 = "0.21.5"
envy = "0.4.2"
fluent = "0.16.0"
fluent-templates = "0.8.0"
http = "0.2"
jsonwebtoken = "9.1.0"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = "0.87.1"
mime = "0.3.17"
oauth2 = "4.4.2"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.30", features = ["parsing"] }
tokio = { version = "1.34.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
ulid = { version = "1.1.0", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.75"

[[bin]]
name = "fediq-poster"
path = "src/bin/poster.rs"
