[package]
name = "fediq"
version = "0.1.0"
edition = "2021"
default-run = "fediq"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", default-features = false, features = [
    "typed-header",
] }
base64 = "0.22.1"
color-eyre = "0.6.5"
envy = "0.4.2"
eyre = "0.6.12"
fluent = "0.17.0"
fluent-templates = "0.13.0"
futures-util = "0.3.31"
http = "1.3"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = "1.1.0"
mime = "0.3.17"
oauth2 = "5.0.0"
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = [
    "json",
    "rustls-tls",
], default-features = false }
reqwest-websocket = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["parsing"] }
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ulid = { version = "1.2.1", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }

[[bin]]
name = "fediq-poster"
path = "src/bin/poster.rs"

[[bin]]
name = "fediq-streaming"
path = "src/bin/streaming.rs"
